--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -204,7 +204,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -214,7 +214,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_alignParentTop="true"
+            android:id="@+id/timing"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="24dp"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="24dp">
@@ -241,6 +243,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_below="@+id/timing"
             android:layout_marginEnd="24dp"
             android:id="@+id/seekbar"/>
 
@@ -248,7 +251,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_alignParentBottom="true"
             android:gravity="center">
 
             <ImageButton
@@ -274,6 +278,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
